expand/collapse stat details and fix padding

--- a/packages/frontend/src/pages/stats.css
+++ b/packages/frontend/src/pages/stats.css
@@ -14,6 +14,11 @@
 }
 
 .stats-heading {
+  /* background: linear-gradient(135.45deg, #f2c092 0%, #56d7c4 95.26%); */
+  background: linear-gradient(135.45deg, #efc197 0%, #5bd7c4 95.26%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-size: 4rem;
   font-weight: 700;
   padding-bottom: 2rem;
@@ -21,6 +26,16 @@
 
 .stats-link {
   padding: 0.5rem 0;
+}
+
+.stats-details {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #f6f6f6;
+  margin: 2rem 1rem 1rem 0;
+  padding-bottom: 1rem;
+  font-size: 1.5rem;
 }
 
 .stats-categories {
@@ -58,6 +73,13 @@
   width: 35%;
   font-size: 2.5rem;
   font-weight: 700;
+}
+
+.circuit-heading {
+  background: linear-gradient(135.45deg, #efc197 0%, #5bd7c4 95.26%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .view {
@@ -131,15 +153,15 @@ select {
     flex-direction: column;
   }
 
-  .contribution-table {
+  /* .contribution-table {
     width: 90%;
     margin: auto;
-  }
+  } */
 }
 
 @media only screen and (max-width: 850px) {
   .stats-container {
-    padding-top: 4rem;
+    padding: 1rem 0 1rem 1.5rem;
   }
 
   .stats-heading {
@@ -149,14 +171,19 @@ select {
   }
 
   .stat-item {
-    width: 14rem;
-    height: 5rem;
-    margin: 1rem 3rem;
-    padding-top: 1rem;
+    width: 100%;
+    height: 4rem;
+    margin: 0.5rem 0;
+    padding: 1rem 0;
+    border-bottom: 1px dashed #454545;
+  }
+
+  .stat-count {
+    width: 100%;
   }
 
   .contribution-container {
-    padding: 0 0rem 5rem 0rem;
+    padding: 3rem 0rem 5rem 1.5rem;
   }
 
   .table-heading {
@@ -165,9 +192,6 @@ select {
 
   .circuit {
     width: 100%;
-    font-size: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    font-size: 2.25rem;
   }
 }
